--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^15.3.3",
     "mongoose": "^8.15.1",
     "next": "15.3.3",
     "react": "^19.0.0",
